<resources>
    <string name="app_name">Haushaltsapp</string>
    <string name="notizen">Notizen</string>
    <string name="to_do">To-Do</string>
    <string name="ausgaben">Ausgaben</string>
    <string name="einkaufsliste">Einkaufsliste</string>
    <string name="fun">Musik</string>
    <string name="my_notes">Meine Notizen</string>
    <string name="new_note">Neu</string>
    <string name="action_settings">Einstellungen</string>
    <string name="DeleteNote">Bist du sicher?</string>
    <string name="action_share_note">Share</string>

    <string name="my_shopping">Einkaufsliste</string>
    <string name="editText_hint_quantity">Anzahl</string>
    <string name="editText_hint_product">Produkt</string>
    <string name="button_add_product">+</string>
    <string name="cab_delete">Einträge löschen</string>
    <string name="editText_errorMessage">Das Feld darf nicht leer sein. </string>
    <string name="cab_change">Eintrag ändern</string>
    <string name="cab_checked_string">ausgewählt</string>
    <string name="dialog_title">Listeneintrag ändern</string>
    <string name="dialog_title_quantity">Anzahl:</string>
    <string name="dialog_title_product">Produkt:</string>
    <string name="dialog_button_positive">Ändern</string>
    <string name="dialog_button_negative">Abbrechen</string>


</resources>

