<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.example.carina.haushaltsapp.HaushaltActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorSecondaryB"
            android:text="@string/einkaufsliste"
            android:textColor="@color/cardview_light_background"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button4"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/notizen"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/to_do"
            android:textSize="12sp" />


        <Button
            android:id="@+id/button2"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorSecondaryB"
            android:text="@string/ausgaben"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="end"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/fun"
            android:scaleType="fitStart"
            android:text="@string/fun"
            app:srcCompat="@mipmap/croc" />
    </LinearLayout>


</LinearLayout>
